# expander-ui

./: .gitignore  .gitmodules  Icon.drawio  LICENSE.md  README.md  RELEASE_NOTES.md  UI.drawio  UIarchitecture.drawio  UImock.drawio  linux_deploy.py  linux_setup.sh  request_model_form_binding.drawio
Docu/: DEPLOY.md  Icon.drawio  UIarchitecture.drawio  UImock.drawio  lables_picture_10x15cm.xcf
ExpanderUi/: .clang-format  AppRun  CMakeLists.txt  IntExp.appdata.xml  IntExp.desktop  main.cpp  main.cpp.gYatdw
ExpanderUi/driver/: CMakeLists.txt  common.hpp
ExpanderUi/driver/tf/: FrameDriver.cpp  FrameDriver.hpp  TF_integration.cpp  tfMsgTypes.hpp
ExpanderUi/libraries/cube/: CMakeLists.txt  stlibp11_SAM.conf
ExpanderUi/libraries/cube/unix/include/: CubeProgrammer_API.h
ExpanderUi/libraries/enum/: CMakeLists.txt
ExpanderUi/libraries/tf/: CMakeLists.txt  TF_Config.h
ExpanderUi/plugins/: i2cconfig.cpp  i2cconfig.h  i2clog.cpp  i2clog.h  i2clogdetails.cpp  i2clogdetails.h  i2clogmodel.cpp  i2clogmodel.h  i2crequest.cpp  i2crequest.h  i2crequestform.cpp  i2crequestform.h  i2crequestmodel.cpp  i2crequestmodel.h  updatemanager.cpp  updatemanager.h  utility.cpp  utility.h
ExpanderUi/plugins/containers/: i2cconfig.cpp  i2cconfig.cpp.xVnroO  i2cconfig.h  i2cconfigstatus.cpp  i2cconfigstatus.h  i2cnotification.cpp  i2cnotification.h  i2crequest.cpp  i2crequest.h  i2crequeststatus.cpp  i2crequeststatus.h  i2ctypes.h
ExpanderUi/plugins/containers/com/: installertypes.h
ExpanderUi/plugins/containers/ctrl/: ctrlTypes.h  ctrlrequest.cpp  ctrlrequest.h  ctrltypes.h  deviceinfo.cpp  deviceinfo.h
ExpanderUi/plugins/containers/i2c/: i2cconfig.cpp  i2cconfig.h  i2cconfigstatus.h  i2clog.cpp  i2clog.h  i2cnotification.cpp  i2cnotification.h  i2crequest.cpp  i2crequest.h  i2crequeststatus.cpp  i2crequeststatus.h  i2ctypes.h
ExpanderUi/plugins/device/: comportmodel.cpp  comportmodel.h  ctrlservice.cpp  ctrlservice.h  devicecom.cpp  devicecom.h  devicemanager.cpp  devicemanager.h  firmwaredownloader.cpp  firmwaredownloader.h  firmwarefilemodel.cpp  firmwarefilemodel.h  firmwareinstaller.cpp  firmwareinstaller.h  i2cservice.cpp  i2cservice.h  interfaceexpander.cpp  interfaceexpander.h
ExpanderUi/plugins/device/driver/: ctrlprotocom.cpp  ctrlprotocom.h  framedriver.cpp  framedriver.h  i2cprotocom.cpp  i2cprotocom.h  tfmsgtypes.h
ExpanderUi/plugins/forms/: i2cconfigform.cpp  i2cconfigform.h  i2cconfigform.h.cUPMkZ  i2crequestform.cpp  i2crequestform.h
ExpanderUi/ui/: I2cConfigInterfacePanelTab.qml  I2cConfigPanel.qml  I2cConfigRequestPanel.qml  I2cLogPanel.qml  I2cRequestListComponent.qml  I2cView.qml  Main.qml  RequestModel.qml  SpiView.qml
ExpanderUi/ui/components/: I2cLogListComponent.qml  I2cRequestListComponent.qml
ExpanderUi/ui/panels/: ConnectionPanel.qml  DeviceInfoPanel.qml  FooterPanel.qml  I2cConfigInterfacePanel.qml  I2cConfigInterfacePanelTab.qml  I2cConfigPanel.qml  I2cConfigRequestPanel.qml  I2cLogDetailsPanel.qml  I2cLogListPanel.qml  I2cLogPanel.qml  I2cRequestFormMasterTab.qml  I2cRequestFormPanel.qml  I2cRequestFormSlaveTab.qml  I2cRequestListComponent.qml  I2cRequestListPanel.qml
ExpanderUi/ui/resources/images/: icons.qrc
ExpanderUi/ui/stores/: Constants.qml  I2cStore.qml  I2cStore.qml.autosave.kPHUac  RootStore.qml
ExpanderUi/ui/views/: I2cView.qml  SettingsView.qml  SpiView.qml
